style.css
h1, h2, p {
  text-align: center;
  color: white;
}

button {
  position: relative;
  width: 20%;
  color: white;
  background-color: rgba(0,0,0,0.5);
  border: solid white 2px;
  border-radius: 15px;
  margin: 20px;
  display: flex;
  align-items: center;
  justify-content: center;
}

button:after {
  content: "";
  display: block;
  padding-bottom: 100%;
}

button img {
  position: absolute;
  width: 80%;
  height: 80%;
}

footer {
  width: 100%;
  bottom: 0;
  left: 0;
  position: fixed;
  background: rgba(58, 34, 2, 0.1);
  display: flex;
  align-items: center;
  justify-content: space-between;
  padding: 0px 20px;
  box-sizing: border-box;
  color: white;
  height: 80px;
}

footer a {
  color: white;
  font-size: x-large;
}

footer a:hover {
  color: grey;
}

/* @media screen and (max-width: 949px) {
  footer {
    display: none;
  }
} */

.container {
  height: 100%;
  width: 100%;
  left:0;
  right: 0;
  top: 0;
  bottom: 0;
  position: absolute;
  display: flex;
  gap: 10%;
  flex-direction: column;
  justify-content: center;
  background: linear-gradient(124deg, #ff2400, #e81d1d, #e8b71d, #e3e81d, #1de840, #1ddde8, #2b1de8, #dd00f3, #dd00f3);
  background-size: 1800% 1800%;

  -webkit-animation: rainbow 18s ease infinite;
  -z-animation: rainbow 18s ease infinite;
  -o-animation: rainbow 18s ease infinite;
    animation: rainbow 18s ease infinite;}

  @-webkit-keyframes rainbow {
      0%{background-position:0% 82%}
      50%{background-position:100% 19%}
      100%{background-position:0% 82%}
  }
  @-moz-keyframes rainbow {
      0%{background-position:0% 82%}
      50%{background-position:100% 19%}
      100%{background-position:0% 82%}
  }
  @-o-keyframes rainbow {
      0%{background-position:0% 82%}
      50%{background-position:100% 19%}
      100%{background-position:0% 82%}
  }
  @keyframes rainbow {
      0%{background-position:0% 82%}
      50%{background-position:100% 19%}
      100%{background-position:0% 82%}
}

.choices {
  display: flex;
  justify-content: center;
}

.result {
  background: rgba(0,0,0,0.5);
  margin-left: 15%;
  margin-right: 15%;
  border-radius: 15px;
  border: solid white 2px;
}

